fix spacing

--- a/client/src/components/tracks.css
+++ b/client/src/components/tracks.css
@@ -7,14 +7,14 @@
     -webkit-text-stroke-width: 1.4px; 
     -webkit-text-stroke-color: #312E50;
     font-family: 'Archivo', sans-serif;
-    font-size: 3.5vh;
+    font-size: 3vh;
     font-style: bold;
     text-align: left;
     margin-left: 3vh;
 }
 
 #num-overlap {
-    font-size:10vh;
+    font-size:8.7vh;
     font-style:bold;
     font-weight:700;
     display:inline; 
@@ -30,13 +30,13 @@
 }
 
 #track-artwork {
-    width: 12vh;
+    width: 11.5vh;
     box-shadow: 0px 0px 8px rgba(49, 46, 80,0.25), -2vh -2vh rgba(49, 46, 80, 0.35);
     align-self: center;
 }
 #track-name {
     color:#312E50;
-    font-size: 2.7vh;
+    font-size: 2.3vh;
     font-weight: bold;
     margin-left: 1.5vh;
     margin-right: 3vh;
@@ -44,7 +44,7 @@
 }
 
 #track-artist {
-    font-size: 2.3vh;
+    font-size: 2vh;
     text-align: left;
     font-weight: normal;
 }
